tests/ui/parallel-rustc/undefined-function-issue-120760.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/undefined-function-issue-120760.rs:21:16
   |
LL |     pub name: &'a str,
   |                ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | pub struct User<'a, 'dep> {
   |                 +++

error[E0560]: struct `User<'_>` has no field named `dep`
  --> $DIR/undefined-function-issue-120760.rs:71:12
   |
LL |     User { dep }.save().await;
   |            ^^^ `User<'_>` does not have this field
   |
   = note: available fields are: `name`

error[E0425]: cannot find function `run` in this scope
  --> $DIR/undefined-function-issue-120760.rs:15:5
   |
LL |     run("dependency").await;
   |     ^^^ not found in this scope

error[E0425]: cannot find function `run` in this scope
  --> $DIR/undefined-function-issue-120760.rs:62:17
   |
LL |         let _ = run("dependency").await;
   |                 ^^^ not found in this scope

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0261, E0425, E0560.
For more information about an error, try `rustc --explain E0261`.
